fix: update GitHub links to point to the correct repository

--- a/content/docs/en/examples.mdx
+++ b/content/docs/en/examples.mdx
@@ -807,7 +807,7 @@ describe("Auth API", () => {
 
 ## Next Steps 📖
 
-- [GitHub](https://github.com/0xviny/azurajs) - Contribute on GitHub
+- [GitHub](https://github.com/azurajs/azura) - Contribute on GitHub
 - [NPM](https://www.npmjs.com/package/azurajs) - Install via NPM
 - [Documentation](/docs) - Explore the full documentation
 await app.listen();
@@ -1078,7 +1078,7 @@ export class UserService {
 
 ## Complete Production Example 🚀
 
-Check the full example in the [examples folder](https://github.com/0xviny/azurajs/tree/main/examples) of the repository.
+Check the full example in the [examples folder](https://github.com/azurajs/azura/tree/main/examples) of the repository.
 
 ## Next Steps 📖
 
@@ -1086,5 +1086,5 @@ Check the full example in the [examples folder](https://github.com/0xviny/azuraj
   <Card title="Quick Start" href="quick-start" description="Start building your own API" />
   <Card title="Controllers" href="controllers" description="Learn more about controllers" />
   <Card title="Validation" href="validation" description="Add validation to your API" />
-  <Card title="GitHub Repository" href="https://github.com/0xviny/azurajs" description="Explore the source code" />
+  <Card title="GitHub Repository" href="https://github.com/azurajs/azura" description="Explore the source code" />
 </Cards>
