--- a/content/docs/en/index.mdx
+++ b/content/docs/en/index.mdx
@@ -155,10 +155,10 @@ Start your journey with AzuraJS by following these guides:
 
 AzuraJS is open source and welcomes contributions! Join our community:
 
-- ⭐ [GitHub Repository](https://github.com/0xviny/azurajs)
+- ⭐ [GitHub Repository](https://github.com/azurajs/azura)
 - 📦 [NPM Package](https://www.npmjs.com/package/azurajs)
-- 🐛 [Report Issues](https://github.com/0xviny/azurajs/issues)
-- 💬 [Discussions](https://github.com/0xviny/azurajs/discussions)
+- 🐛 [Report Issues](https://github.com/azurajs/azura/issues)
+- 💬 [Discussions](https://github.com/azurajs/azura/discussions)
 
 ---
 
