--- a/content/docs/en/quick-start.mdx
+++ b/content/docs/en/quick-start.mdx
@@ -1030,10 +1030,10 @@ Configure debugging in VS Code by creating `.vscode/launch.json`:
 ## 🆘 Need Help?
 
 <Callout type="info" title="📚 Community Resources">
-- 🐛 **Bugs?** [Report on GitHub Issues](https://github.com/0xviny/azurajs/issues)
-- 💬 **Questions?** [Ask in Discussions](https://github.com/0xviny/azurajs/discussions)
-- 📖 **Examples:** [See official examples](https://github.com/0xviny/azurajs/tree/main/examples)
-- ⭐ **Like it?** [Give a star on GitHub](https://github.com/0xviny/azurajs)
+- 🐛 **Bugs?** [Report on GitHub Issues](https://github.com/azurajs/azura/issues)
+- 💬 **Questions?** [Ask in Discussions](https://github.com/azurajs/azura/discussions)
+- 📖 **Examples:** [See official examples](https://github.com/azurajs/azura/tree/main/examples)
+- ⭐ **Like it?** [Give a star on GitHub](https://github.com/azurajs/azura)
 </Callout>
 
 ---
