--- a/content/docs/pt/examples.mdx
+++ b/content/docs/pt/examples.mdx
@@ -1070,7 +1070,7 @@ export class UserService {
 
 ## Exemplo Completo de Produção 🚀
 
-Confira o exemplo completo na [pasta de exemplos](https://github.com/0xviny/azurajs/tree/main/examples) do repositório.
+Confira o exemplo completo na [pasta de exemplos](https://github.com/azurajs/azura/tree/main/examples) do repositório.
 
 ## Próximos Passos 📖
 
@@ -1078,5 +1078,5 @@ Confira o exemplo completo na [pasta de exemplos](https://github.com/0xviny/azur
   <Card title="Quick Start" href="quick-start" description="Comece a construir sua própria API" />
   <Card title="Controllers" href="controllers" description="Aprenda mais sobre controllers" />
   <Card title="Validação" href="validation" description="Adicione validação à sua API" />
-  <Card title="Repositório GitHub" href="https://github.com/0xviny/azurajs" description="Explore o código fonte" />
+  <Card title="Repositório GitHub" href="https://github.com/azurajs/azura" description="Explore o código fonte" />
 </Cards>
