--- a/content/docs/pt/index.mdx
+++ b/content/docs/pt/index.mdx
@@ -155,10 +155,10 @@ Comece sua jornada com AzuraJS seguindo estes guias:
 
 AzuraJS é código aberto e aceita contribuições! Junte-se à nossa comunidade:
 
-- ⭐ [Repositório GitHub](https://github.com/0xviny/azurajs)
+- ⭐ [Repositório GitHub](https://github.com/azurajs/azura)
 - 📦 [Pacote NPM](https://www.npmjs.com/package/azurajs)
-- 🐛 [Reportar Issues](https://github.com/0xviny/azurajs/issues)
-- 💬 [Discussões](https://github.com/0xviny/azurajs/discussions)
+- 🐛 [Reportar Issues](https://github.com/azurajs/azura/issues)
+- 💬 [Discussões](https://github.com/azurajs/azura/discussions)
 
 ---
 
