--- a/content/docs/pt/quick-start.mdx
+++ b/content/docs/pt/quick-start.mdx
@@ -1030,10 +1030,10 @@ Configure debugging no VS Code criando `.vscode/launch.json`:
 ## 🆘 Precisa de Ajuda?
 
 <Callout type="info" title="📚 Recursos da Comunidade">
-- 🐛 **Bugs?** [Reporte no GitHub Issues](https://github.com/0xviny/azurajs/issues)
-- 💬 **Dúvidas?** [Pergunte nas Discussions](https://github.com/0xviny/azurajs/discussions)
-- 📖 **Exemplos:** [Veja os exemplos oficiais](https://github.com/0xviny/azurajs/tree/main/examples)
-- ⭐ **Gostou?** [Dê uma estrela no GitHub](https://github.com/0xviny/azurajs)
+- 🐛 **Bugs?** [Reporte no GitHub Issues](https://github.com/azurajs/azura/issues)
+- 💬 **Dúvidas?** [Pergunte nas Discussions](https://github.com/azurajs/azura/discussions)
+- 📖 **Exemplos:** [Veja os exemplos oficiais](https://github.com/azurajs/azura/tree/main/examples)
+- ⭐ **Gostou?** [Dê uma estrela no GitHub](https://github.com/azurajs/azura)
 </Callout>
 
 ---
